--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@200;400;600&display=swap");
 @import "reset.css";
+@import "variables.css";
 @import "status-bar.css";
 
 body {
@@ -24,4 +25,24 @@ body {
   width: 60%;
   opacity: 0.7;
   font-weight: 200;
+}
+#login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 15px;
+  font-weight: 200;
+}
+#login-form input {
+  background-color: cornflowerblue;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 15px 0px;
+  margin-bottom: 10px;
+  transition: border-color 0.3s ease-in-out;
+}
+#login-form input::placeholder {
+  color: rgba(255, 255, 255, 0.3);
+}
+#login-form input:focus {
+  border-color: var(--orange);
 }
