--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ body {
   opacity: 0.7;
   font-weight: 200;
 }
+.welcome-header__greeting-emoticon {
+  margin-top: 20px;
+}
 #login-form {
   display: flex;
   flex-direction: column;
@@ -33,11 +36,13 @@ body {
   font-weight: 200;
 }
 #login-form input {
-  background-color: cornflowerblue;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   padding: 15px 0px;
   margin-bottom: 10px;
+}
+#login-form input:not([type="submit"]) {
+  background-color: cornflowerblue;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   transition: border-color 0.3s ease-in-out;
 }
 #login-form input::placeholder {
@@ -45,4 +50,27 @@ body {
 }
 #login-form input:focus {
   border-color: var(--orange);
+}
+/* To do: 패스워드와 로그인 사이의 간격을 더 떨어트리기. nth-child(3)로 해결함. */
+#login-form input[type="submit"] {
+  background-color: rgb(255, 174, 0);
+  border-radius: 5px;
+  font-size: 13px;
+  font-weight: lighter;
+  /* 질문 1 여기서 버튼 안에 있는 폰트의 굵기. 혹은 글씨체를 어떻게 바꾸나? */
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+#login-form input[type="submit"]:hover {
+  background-color: var(--orange);
+  color: rgba(255, 255, 255, 0.9);
+}
+#login-form a {
+  text-decoration: none;
+  margin-top: 10px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+}
+#login-form input:nth-child(3) {
+  margin-top: 30px;
 }
