--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@200;400;600&display=swap");
+
 @import "reset.css";
 @import "variables.css";
 
 /* components */
-@import "contents/status-bar.css";
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
 
 /* screens */
 @import "screens/login.css";
@@ -12,4 +14,3 @@ body {
   font-family: "MuseoModerno", cursive;
   background-color: cornflowerblue;
 }
-
