--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,12 +1,48 @@
 /* 니꼬쌤은 .nav에 주었던데 왜 .nav__list에 padding과 background-color를 주면 안되는가?  */
-.nav__list {
+.nav {
   padding: 20px 50px;
+  background-color: var(--orange);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* width를 100퍼 하니까 마지막 elipses아이콘이 사라짐. 왜냐면 padding때문에. 그래서 아래 마법의 한 줄! box-sizing: border-box; */
+  box-sizing: border-box;
+}
+.nav__list {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  background-color: var(--orange);
-  border-top: 0.1px solid rgba(255, 255, 255, 0.9);
 }
 .nav__link {
-  color: rgba(255, 255, 255, 0.9);
+  color: rgb(255, 255, 255);
+  position: relative;
+  /* position:absolute는 가장 가까운 relative를 가진 부모를 기준으로 움직여! */
+}
+.nav__notification {
+  background-color: tomato;
+  color: white;
+  font-size: 3px;
+  font-weight: 600;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  /* right: 1px; 이렇게 줬더니 휙하고 저 멀리 가버렸어. 왜? 왜냐하면 이 nav__notification을 갖고 있는 container에다가 relative하게 속성을 만들어주지 않으면 얘는 body를 기준으로 움직이기 때문.*/
+}
+a > div {
+  background-color: tomato;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 6px;
+  height: 6px;
+  border-radius: 3px;
+  position: absolute;
+  left: 40px;
+  bottom: 30px;
 }
