--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: center;
   padding: 5px;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
 }
 .status-bar__column {
   width: 33%;
@@ -22,6 +25,6 @@
   margin: 0px 5px;
 }
 .status-bar__column .fa-bolt {
-  margin-left: 5px;
+  margin: 0px 5px;
 }
 /* 여기서 .status-bar__column랑 .fa-bolt사이에 공백이 없으면 작동이 되지 않음.*/
