--- a/css/screens/friend.css
+++ b/css/screens/friend.css
@@ -5,6 +5,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   padding: 15px 0px;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 #friends-display-link i {
   /* icon은 폰트랑 같다고 생각하면 됨. 그래서 그냥 color로 설정. */
