--- a/css/screens/friend.css
+++ b/css/screens/friend.css
@@ -14,3 +14,14 @@
 #friends-display-link span {
   margin: 0px 10px;
 }
+.friends-screen__channel {
+  margin-top: 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  padding-top: 15px;
+}
+.friends-screen__channel-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  color: rgba(0, 0, 0, 0.5);
+}
