--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
-
+@import "components/badge.css";
 /* screens */
 @import "screens/login.css";
 @import "screens/friend.css";
@@ -16,4 +16,7 @@
 body {
   font-family: "MuseoModerno", cursive;
   background-color: cornflowerblue;
+}
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
