--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -50,3 +50,4 @@
   /* 이렇게만하면 아무런 변화가 없어. 왜냐하면 이것이 span이기 때문이지. 그래서 block으로 바꿔줘야됨. */
   display: block;
 }
+/* 채팅창을 여러개 만들면 아마 딱 붙을꺼야. 그러니 margin-bottom같은 것을 추가해서 여러 창 만드는 것 해봐! */
