--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 /* screens */
 @import "screens/login.css";
 @import "screens/friend.css";
+@import "screens/find.css";
 
 body {
   font-family: "MuseoModerno", cursive;
