--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -44,3 +44,84 @@
   color: rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
 }
+
+.open-chat__header {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 0 25px 0;
+  color: rgba(0, 0, 0, 0.5);
+}
+.open-chat__header span {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.open-post {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.open-post__column {
+  display: flex;
+  flex-direction: column;
+}
+.open-post__title {
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.open-post__hastag {
+  text-transform: uppercase;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.3);
+  margin-bottom: 5px;
+}
+.open-post__members {
+  display: flex;
+  /* align-items: center; */
+}
+.open-post__members img {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin-right: 7px;
+}
+.open-post__member-count {
+  color: rgba(0, 0, 0, 0.3);
+  font-size: 15px;
+}
+/* 아래에 .opend-post__members . divider라고 작성한 이유는 코드상에 divider가 많이 있을 수 있으니까 더 특정지어서 적은 것! */
+.open-post__members .divider {
+  width: 1px;
+  height: 10px;
+  margin: 0 10px;
+  color: rgba(0, 0, 0, 0.3);
+}
+.open-post__member-status {
+  color: var(--orange);
+  font-size: 15px;
+}
+.open-post__preview {
+  position: relative;
+}
+.open-post__preview img {
+  height: 100px;
+  width: 100px;
+  border-radius: 10px;
+}
+.open-post__heart-count {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  font-weight: 500;
+  font-size: 13px;
+  border-radius: 30px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  position: absolute;
+  left: 35px;
+  bottom: 10px;
+}
+.open-post__heart-count span {
+  margin-left: 5px;
+}
