--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -51,3 +51,15 @@
   display: block;
 }
 /* 채팅창을 여러개 만들면 아마 딱 붙을꺼야. 그러니 margin-bottom같은 것을 추가해서 여러 창 만드는 것 해봐! */
+.user-component__alert {
+  color: tomato;
+  border: 1.4px solid tomato;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  font-weight: 600;
+  width: 14px;
+  height: 14px;
+  border-radius: 9px;
+}
