--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,7 @@
   position: fixed;
   width: 100%;
   box-sizing: border-box;
+  background-color: cornflowerblue;
 }
 .status-bar__column {
   width: 33%;
