--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -19,9 +19,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-right: 30px;
 }
 .more-suggestions__icon-image img {
   height: 60px;
   width: 60px;
   border-radius: 20px;
+}
+.more-suggestions__icon-image {
+  height: 60px;
+  width: 60px;
+  border-radius: 20px;
+  background-color: var(--orange);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.more-suggestions__icon-text {
+  margin-top: 10px;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.5);
 }
