--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,6 +3,7 @@
   justify-content: center;
   padding: 5px;
   position: fixed;
+  top: 0;
   width: 100%;
   box-sizing: border-box;
   background-color: cornflowerblue;
