--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -26,4 +26,116 @@
   color: white;
   padding: 10px;
   border-radius: 20px;
+  margin-bottom: 25px;
+}
+.message-row {
+  width: 100%;
+  display: flex;
+  margin-bottom: 25px;
+}
+.message-row img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.message__column-info {
+  display: flex;
+}
+.message__sender {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 600;
+  font-size: 15px;
+  display: block;
+  margin-bottom: 10px;
+  /* margin-bottom이 안 먹힌 이유는 이것이 span이기 때문이야. 그래서 block으로 만들어줘야됨. */
+}
+.message__time {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 600;
+  font-size: 10px;
+}
+.message__bubble {
+  background-color: white;
+  border-radius: 10px;
+  border-top-left-radius: 0px;
+  padding: 10px 12px;
+  margin-right: 10px;
+  font-size: 20px;
+}
+.message__column-info {
+  display: flex;
+  align-items: flex-end;
+}
+.message-row--own {
+  justify-content: flex-end;
+}
+.message-row--own .message__bubble {
+  background-color: cornflowerblue;
+  border-top-right-radius: 0px;
+  border-top-left-radius: 10px;
+  margin-right: 0;
+  margin-left: 10px;
+}
+.message-row--own .message__column-info {
+  flex-direction: row-reverse;
+}
+.reply {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 5px 25px;
+  align-items: center;
+  font-size: 30px;
+  box-sizing: border-box;
+}
+
+.reply input {
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  padding-left: 15px;
+}
+.reply .reply__column:first-child {
+  width: 10%;
+  opacity: 0.5;
+}
+.reply .reply__column:last-child {
+  width: 90%;
+  position: relative;
+  margin-right: 15px;
+}
+.reply__column:last-child > i,
+.reply button {
+  position: absolute;
+  right: -14px;
+  top: 5px;
+}
+.reply__column:last-child > i {
+  right: 30px;
+  top: 9px;
+  font-size: 25px;
+  opacity: 0.5;
+}
+.reply__column button {
+  font-size: 18px;
+  border: none;
+  background-color: tomato;
+  color: white;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  transition: all 0.5s ease-in-out;
+}
+.reply__column button:focus,
+.reply__column button:active {
+  outline: none;
+}
+.reply__column button:hover {
+  opacity: 0.8;
+  color: rgba(0, 0, 0, 0.8);
 }
