--- a/css/screens/friend.css
+++ b/css/screens/friend.css
@@ -25,3 +25,39 @@
   margin-bottom: 20px;
   color: rgba(0, 0, 0, 0.5);
 }
+
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background-color: var(--orange);
+  color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
+  animation: hideSplashScreen 0.5s ease-in-out forwards;
+  animation-delay: 1s;
+}
+#splash-screen .fa-comment {
+  position: relative;
+}
+#splash-screen span {
+  position: absolute;
+  opacity: 0.9;
+  color: white;
+  font-size: 15px;
+  top: 43px;
+  left: 20px;
+}
