--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,12 +19,24 @@
   position: relative;
   /* position:absolute는 가장 가까운 relative를 가진 부모를 기준으로 움직여! */
 }
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: none;
+  }
+}
 .nav__notification {
   box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
   position: absolute;
   left: 20px;
   bottom: 20px;
   /* right: 1px; 이렇게 줬더니 휙하고 저 멀리 가버렸어. 왜? 왜냐하면 이 nav__notification을 갖고 있는 container에다가 relative하게 속성을 만들어주지 않으면 얘는 body를 기준으로 움직이기 때문.*/
+  animation: notificationAnimation 1.4s ease-in-out infinite;
 }
 a > div {
   background-color: tomato;
@@ -35,4 +47,27 @@ a > div {
   position: absolute;
   left: 40px;
   bottom: 30px;
+}
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+.nav__btn {
+  transform: translateY(60px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.8s;
 }
