--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -15,11 +15,21 @@
   z-index: 1;
   /* by default z-index is zero. 수가 클 수록 위에 있게 됨.*/
 }
+@keyframes fadeIn {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .main-chat {
   margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 1s linear forwards;
 }
 .chat__timestamp {
   background-color: rgba(0, 0, 0, 0.2);
@@ -101,6 +111,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   padding-left: 15px;
+  transition: all 0.2s linear;
 }
 .reply .reply__column:first-child {
   width: 10%;
@@ -137,7 +148,22 @@
 .reply__column button:active {
   outline: none;
 }
+.reply .reply__column:first-child,
+.reply button,
+.reply .fa-smile {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within button,
+.reply:focus-within .fa-smile {
+  opacity: 0;
+}
 .reply__column button:hover {
   opacity: 0.8;
   color: rgba(0, 0, 0, 0.8);
+}
+.reply__column input:focus {
+  transform: translateX(-10%);
+  width: 95vw;
 }
