--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -100,6 +100,37 @@
   left: 35px;
   bottom: 10px;
 }
+@keyframes beatingHeartAnimation {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: scale(1.2);
+    /* 
+    이렇게 작은 단위 1.1, 0.5 의 값을 scale로 주게 되면 뷰포트에서 막 흔들리는 것처럼 보이게 됨. 
+    니꼬에 의하면 사이즈 계산에 문제가 있는 것 같대. 그래서 새로운 property를 배울 것인데, 이 새로운 property는 
+    will-change라고 불려. will-change는 기본적으로 브라우저에게 무언가가 바뀔것이다 이렇게 미리 얘기해주는 것. 
+    이렇게 브라우저에게 무언가가 바뀔 것이라고 미리 얘기를 해두면 브라우저는 애니메이션을 좀 더 낫게 만들어.
+    그리고 그 명령어는 
+    .open-post__preview:hover i 여기에다가 적어줘야됨. 
+    will-change는 유저의 디스플레이에 내장된(?) 그래픽카드를 이용해서 애니메이션을 가속화 해.
+    */
+    color: tomato;
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+/* .open-post__heart-count i:hover { 
+  animation: beatingHeartAnimation 1.3s ease-in-out infinite;
+} 나는 이렇게 작성했는데 아래처럼 작성하면 하트에만 마우스를 갖다 대지 않아도 하트가 움직이게 할 수가 있어!
+근데 나는 거기서 또 고쳐서 이미지에만 갖대대어도 하트 애니메이션이 작동하도록 코드를 작성함. */
+.open-post__preview:hover i {
+  will-change: transform;
+  animation: beatingHeartAnimation 1.3s ease-in-out infinite;
+}
 .open-post__heart-count span {
   margin-left: 5px;
 }
